# nhl-cli

./: .flake8  .gitignore  DOCS.md  README.md  generate-docs.sh  globals.py  helpers.py  nhl.py  pyproject.toml
endpoints/: franchises.py  teams.py
nhl/: main.py
nhl/endpoints/: awards.py  conferences.py  configurations.py  depth_types.py  divisions.py  draft.py  event_types.py  expands.py  franchises.py  game.py  game_status.py  game_types.py  image_sizes.py  image_types.py  languages.py  league_leader_types.py  people.py  performer_types.py  platforms.py  play_types.py  play_types_player.py  player_status.py  positions.py  power_play_strength.py  prospect_categories.py  prospects.py  roster_statuses.py  roster_types.py  schedule.py  schedule_types.py  seasons.py  series_codes.py  site_language.py  standings.py  standings_types.py  stat_types.py  team_designations.py  teams.py  tournament_types.py  tournaments.py  (+1 more)
nhl/utils/: callbacks.py  constants.py  context.py  enums.py  expands.py  globals.py  helpers.py  locales.py  options.py
test_nhl/: test_commands.py  test_helpers.py
