[tool.poetry]
name = "nhl-cli"
version = "0.1.0"
description = "A command-line interface for the public NHL API"
authors = ["Ethan Saxenian <ethansaxenian@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "nhl"}]
repository = "https://github.com/ethansaxenian/nhl-cli"
homepage = "https://github.com/ethansaxenian/nhl-cli"
documentation = "https://github.com/ethansaxenian/nhl-cli/blob/main/DOCS.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
rich = { version = "^12.5.1", optional = true }
merge-args = "^0.1.4"
typer = "^0.6.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"

[tool.poetry.extras]
rich = ['rich']

[tool.poetry.scripts]
nhl = "nhl.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
